--- a/js-snack-1/index.html
+++ b/js-snack-1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <script type="ttext/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     
 </body>
 </html>
