--- a/js-snack-1/index.html
+++ b/js-snack-1/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <div id="lighter-bike"></div>
+
     <script type="text/javascript" src="js/script.js"></script>
     
 </body>
